--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,18 @@
   color: rgb(19,0,136);
   margin-bottom: 1em;
 }
+#create_folder_button {
+  border: none;
+  font-size: large;
+}
+
+#folderDialog {
+  text-align: center;
+  background-color: rgb(0,255,240);
+  font-family: serif;
+  padding: 1em;
+  width:100%;
+}
 
 .col.Title_Container {
   text-align: center;
