--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,8 +13,9 @@
   text-align: center;
   background-color: rgb(0,255,240);
   font-family: serif;
-  padding: 1em;
+  padding: 1em 0px;
   width:100%;
+  margin: auto;
 }
 
 .col.Title_Container {
