--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,9 @@
   width:100%;
   margin: auto;
 }
+.Selected_Class{
+  background: #24ff00;
+}
 #create_file_dialog {
   text-align: center;
   background-color: lawngreen;
