--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,6 +19,10 @@
 .Selected_Class{
   background: #24ff00;
 }
+.Class_Header{
+  font-weight: bold;
+  font-size: large;
+}
 #create_file_dialog {
   text-align: center;
   background-color: lawngreen;
