--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,6 +19,16 @@
   line-height: 3em;
   padding: 0.5em;
 }
+.SymbolTable_Entry{
+  text-align: left;
+}
+#SYMBOL_TABLE_HEADER{
+  font-weight: bold;
+  font-size: large;
+}
+#SYMBOL_TABLE tbody tr:nth-child(odd) {background: #CCC}
+#SYMBOL_TABLE tbody tr:nth-child(even) {background: #FFF}
+
 #folderDialog,#create_file_dialog {
   text-align: center;
   background-color: rgb(0,255,240);
